--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Working space for top-secret super-stealth project of Compumegashashwhere.
+Working space for top-secret super-stealth project of Compumegashashwhere. You're not sposed ta talk about it.
